--- a/views/dentist_treatment_view.xml
+++ b/views/dentist_treatment_view.xml
@@ -12,16 +12,11 @@
                                     name="action_show_tooth_custom"/>
                         </header>
                         <group>
-                            <!-- Fields to be displayed on the form -->
-                            <field name="name"/>
                             <field name="patient_ids" widget="many2many_tags"/>
                             <field name="description"/>
+                            <field name="total_cost"/>
                             <field name="duration"/>
-                            <field name="total_cost_info"/>
-                            <field name="tooth_completed"/>
-                            <field name="tooth_in_progress"/>
-                            <field name="progress_procedure"/>
-                            <field name="completed_procedure"/>
+                            <field name="treatment_data_ids" widget="one2many"/>
                         </group>
                     </sheet>
                 </form>
@@ -34,10 +29,11 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
+                    <field name="total_cost"/>
+                    <field name="treatment_data_ids"/>
                 </tree>
             </field>
         </record>
-
 
 
         <record id="action" model="ir.actions.act_window">
