--- a/views/dentist_treatment_view.xml
+++ b/views/dentist_treatment_view.xml
@@ -7,15 +7,18 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
-                        <header>
-                            <button string="Show Tooth Custom" type="object" class="oe_highlight"
-                                    name="action_show_tooth_custom"/>
-                        </header>
+                        <div class="oe_button_box" name="button_box" style="text-align: left;">
+                            <button string="Show Tooth Custom" type="object" class="oe_stat_button"
+                                    name="action_show_tooth_custom" icon="fa fa-medkit"/>
+                            <button string="Show Progress Chart" type="object" class="oe_stat_button"
+                                    name="action_show_patient_progress_chart" icon="fa-solid fa-line-chart"/>
+                        </div>
                         <group>
                             <field name="patient_ids" widget="many2many_tags"/>
                             <field name="description"/>
-                            <field name="total_cost"/>
                             <field name="treatment_data_ids" widget="one2many"/>
+                            <field name="total_cost" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                            <field name="currency_id" invisible="1"/>
                         </group>
                     </sheet>
                 </form>
@@ -28,7 +31,8 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
-                    <field name="total_cost"/>
+                    <field name="total_cost" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                    <field name="currency_id" invisible="1"/>
                     <field name="treatment_data_ids"/>
                 </tree>
             </field>
