--- a/views/patient_view.xml
+++ b/views/patient_view.xml
@@ -8,11 +8,14 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
-                        <header>
-                            <button string="Treatments" class="oe_highlight" type="object"
-                                    name="action_view_treatments"/>
-                        </header>
-                        <div class="oe_button_box" name="button_box"/>
+                        <div class="oe_button_box" name="button_box" style="text-align: left;">
+                            <button type="object" class="oe_stat_button " icon="fa-solid fa-user-o"
+                                    name="action_view_treatments">
+                                <div class="o_stat_info">
+                                    <span class="o_stat_text">Treatments</span>
+                                </div>
+                            </button>
+                        </div>
                         <div>
                             <field name="image_1920" widget='image' class="oe_avatar"
                                    options='{"zoom": true, "preview_image":"image_1920"}'/>
@@ -64,6 +67,8 @@
                                     <group string="Images" class="oe_avatar_images_group">
                                         <div class="oe_avatar_image">
                                             <label for="x_rays" class="oe_form_label">X-Rays</label>
+                                            <field name="image" widget="many2many_binary"/>
+
                                             <field name="x_rays" widget="image" options="{'size': (200, 200)}"/>
                                         </div>
                                         <div class="oe_avatar_image">
