--- a/views/dentist_treatment_view.xml
+++ b/views/dentist_treatment_view.xml
@@ -9,7 +9,7 @@
                     <sheet>
                         <div class="oe_button_box" name="button_box" style="text-align: left;">
                             <button string="Show Tooth Custom" type="object" class="oe_stat_button"
-                                    name="action_show_tooth_custom" icon="fa fa-medkit"/>
+                                    name="action_show_tooth_custom" icon="fa-solid fa-stethoscope"/>
                             <button string="Show Progress Chart" type="object" class="oe_stat_button"
                                     name="action_show_patient_progress_chart" icon="fa-solid fa-line-chart"/>
                         </div>
