--- a/views/assets.xml
+++ b/views/assets.xml
@@ -2,9 +2,10 @@
     <data>
         <template id="assets_backend" name="dentist.assets_backend" inherit_id="web.assets_backend">
             <xpath expr="." position="inside">
-                <script type="text/javascript" src="/Dentist/static/src/js/tooth.js"></script>
-                <script type="text/javascript" src="/Dentist/static/src/js/dashboard.js"></script>
-                <script type="text/javascript" src="/Dentist/static/src/js/patient_progress_chart.js"></script>
+                <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"/>
+                <script type="text/javascript" src="/Dentist/static/src/js/tooth.js"/>
+                <script type="text/javascript" src="/Dentist/static/src/js/dashboard.js"/>
+                <script type="text/javascript" src="/Dentist/static/src/js/patient_progress_chart.js"/>
                 <link rel="stylesheet" href="/Dentist/static/src/css/tooth.css"/>
             </xpath>
         </template>
